<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.firsovav.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.firsovav.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.firsovav.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_information"
        android:name="ru.mirea.firsovav.mireaproject.InformationFragment"
        android:label="@string/menu_information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/nav_web"
        android:name="ru.mirea.firsovav.mireaproject.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />
    <fragment
        android:id="@+id/nav_worker"
        android:name="ru.mirea.firsovav.mireaproject.WorkerFragment"
        android:label="fragment_worker"
        tools:layout="@layout/fragment_worker" />
</navigation>